tests/err_str_esc02.json.err
Parse error at line 001

001: ["a\x"]
          ^
Invalid escape \x
